tests/k8s_testcases/network-policy-checks-bad-path/matchlabels_wrong_value_label_form.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podselector-matchlabels-test-val-label
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
     app: abcdefghijklmnopqrstuvwxyz1234567890abcdefghijklmnopqrstuvwxyz1234567890
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
